src/test/deca/context/valid/assign_in_cond.deca
// Description:
//   Test d'une assignation à l'intérieur d'une condition
//
// Resultats:
//    ok
// 

{
    int a = 4;
    int b;
    if( b=0 ){
    }

}
