src/test/deca/context/invalid/binary_op_bool/geq_float_string.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 11 : mauvais typage de l'inégalité
// 

{
    float a;
    a = a >= "ok"
}
